// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard renders dashboard content 1`] = `
<Fragment>
  <DashboardNavigation
    activeHref="/dashboard"
  />
  <Title>
    Get ready to apply
  </Title>
  <Alert
    className="margin-bottom-3"
    heading="Only some people can apply online for now"
    neutral={true}
    state="info"
  >
    <Heading
      className="margin-top-3"
      level="3"
    >
      <SvgIconLaptop
        className="margin-right-1 text-secondary text-middle"
        fill="currentColor"
        height={20}
        width={20}
      />
      Apply online
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.dashboard.alertOnline"
    />
    <Heading
      level="3"
    >
      <SvgIconPhone
        className="margin-right-1 text-secondary text-middle"
        fill="currentColor"
        height={20}
        width={20}
      />
      Apply by phone
    </Heading>
    <Trans
      components={
        Object {
          "benefits-timeline-link": <a
            href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-timeline#december-2,-2020-"
          />,
          "contact-center-phone-link": <a
            href="tel:(833) 344‑7365"
          />,
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.dashboard.alertPhone"
    />
  </Alert>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      <FontAwesomeIcon
        border={false}
        className="margin-right-1 text-secondary"
        fixedWidth={true}
        flip={null}
        icon={
          Object {
            "icon": Array [
              576,
              512,
              Array [],
              "f086",
              "M532 386.2c27.5-27.1 44-61.1 44-98.2 0-80-76.5-146.1-176.2-157.9C368.3 72.5 294.3 32 208 32 93.1 32 0 103.6 0 192c0 37 16.5 71 44 98.2-15.3 30.7-37.3 54.5-37.7 54.9-6.3 6.7-8.1 16.5-4.4 25 3.6 8.5 12 14 21.2 14 53.5 0 96.7-20.2 125.2-38.8 9.2 2.1 18.7 3.7 28.4 4.9C208.1 407.6 281.8 448 368 448c20.8 0 40.8-2.4 59.8-6.8C456.3 459.7 499.4 480 553 480c9.2 0 17.5-5.5 21.2-14 3.6-8.5 1.9-18.3-4.4-25-.4-.3-22.5-24.1-37.8-54.8zm-392.8-92.3L122.1 305c-14.1 9.1-28.5 16.3-43.1 21.4 2.7-4.7 5.4-9.7 8-14.8l15.5-31.1L77.7 256C64.2 242.6 48 220.7 48 192c0-60.7 73.3-112 160-112s160 51.3 160 112-73.3 112-160 112c-16.5 0-33-1.9-49-5.6l-19.8-4.5zM498.3 352l-24.7 24.4 15.5 31.1c2.6 5.1 5.3 10.1 8 14.8-14.6-5.1-29-12.3-43.1-21.4l-17.1-11.1-19.9 4.6c-16 3.7-32.5 5.6-49 5.6-54 0-102.2-20.1-131.3-49.7C338 339.5 416 272.9 416 192c0-3.4-.4-6.7-.7-10C479.7 196.5 528 238.8 528 288c0 28.7-16.2 50.6-29.7 64z",
            ],
            "iconName": "comments",
            "prefix": "far",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
      1. Tell your employer that you need to take paid leave
    </Heading>
    <Trans
      i18nKey="pages.dashboard.stepOne"
    />
    <Heading
      level="2"
    >
      <FontAwesomeIcon
        border={false}
        className="margin-right-1 text-secondary"
        fixedWidth={true}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f15b",
              "M369.9 97.9L286 14C277 5 264.8-.1 252.1-.1H48C21.5 0 0 21.5 0 48v416c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48V131.9c0-12.7-5.1-25-14.1-34zM332.1 128H256V51.9l76.1 76.1zM48 464V48h160v104c0 13.3 10.7 24 24 24h104v288H48z",
            ],
            "iconName": "file",
            "prefix": "far",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
      2. Get documentation that supports your leave request
    </Heading>
    <Trans
      components={
        Object {
          "healthcare-provider-form-link": <a
            href="https://www.mass.gov/hcp-form"
          />,
        }
      }
      i18nKey="pages.dashboard.stepTwo"
    />
    <Heading
      level="2"
    >
      <FontAwesomeIcon
        border={false}
        className="margin-right-1 text-secondary"
        fixedWidth={true}
        flip={null}
        icon={
          Object {
            "icon": Array [
              576,
              512,
              Array [],
              "f044",
              "M402.3 344.9l32-32c5-5 13.7-1.5 13.7 5.7V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h273.5c7.1 0 10.7 8.6 5.7 13.7l-32 32c-1.5 1.5-3.5 2.3-5.7 2.3H48v352h352V350.5c0-2.1.8-4.1 2.3-5.6zm156.6-201.8L296.3 405.7l-90.4 10c-26.2 2.9-48.5-19.2-45.6-45.6l10-90.4L432.9 17.1c22.9-22.9 59.9-22.9 82.7 0l43.2 43.2c22.9 22.9 22.9 60 .1 82.8zM460.1 174L402 115.9 216.2 301.8l-7.3 65.3 65.3-7.3L460.1 174zm64.8-79.7l-43.2-43.2c-4.1-4.1-10.8-4.1-14.8 0L436 82l58.1 58.1 30.9-30.9c4-4.2 4-10.8-.1-14.9z",
            ],
            "iconName": "edit",
            "prefix": "far",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
      3. Apply
    </Heading>
    <Trans
      components={
        Object {
          "contact-center-phone-link": <a
            href="tel:(833) 344‑7365"
          />,
          "li": <li />,
          "medical-bonding-link": <a
            href="https://www.mass.gov/pfml-medical-bonding"
          />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.dashboard.stepThree"
    />
    <ButtonLink
      className="margin-top-3 margin-bottom-8"
      href="/applications/start"
    >
      Create an application
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Dashboard renders dashboard content 2`] = `
Array [
  <p
    key="p-0"
  >
    If you are currently employed in Massachusetts but not self-employed, you can apply online or by phone for the following types of paid leave:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      Medical leave due to your own illness, injury, or pregnancy
    </li>
    <li
      key="1"
    >
      Family leave to bond with your child after birth, adoption, or foster placement — whether you are applying before or after the child arrives
    </li>
  </ul>,
]
`;

exports[`Dashboard renders dashboard content 3`] = `
Array [
  <p
    key="p-0"
  >
    Apply by calling the Department of Family and Medical Leave Contact Center at 
    <a
      href="tel:(833) 344‑7365"
      key="1"
    >
      (833) 344‑7365
    </a>
     if 
    <strong
      key="strong-3"
    >
      any
    </strong>
     of the following are true:
  </p>,
  <ul
    className="usa-list"
    key="1"
  >
    <li
      key="0"
    >
      You are self-employed or unemployed and you are applying for paid leave
    </li>
    <li
      key="1"
    >
      You need paid family leave to care for a family member who serves in the armed forces
    </li>
    <li
      key="2"
    >
      You need paid family leave to manage family affairs when a family member is on active duty in the armed forces
    </li>
  </ul>,
]
`;

exports[`Dashboard renders dashboard content 4`] = `
Array [
  <p
    key="p-0"
  >
    If you can, tell your employer at least 30 days before your leave begins. If you need to take leave right away, tell your employer as soon as possible.
  </p>,
  <p
    key="p-1"
  >
    Once you tell your employer, you have the right to apply and your job is protected. Make a note of when you notified your employer. You will need to provide this date in your leave application.
  </p>,
]
`;

exports[`Dashboard renders dashboard content 5`] = `
Array [
  <p
    key="p-0"
  >
    For medical leave your health care provider must complete the 
    <a
      href="https://www.mass.gov/hcp-form"
      key="1"
    >
      PFML Certification of a Serious Health Condition
    </a>
    .
  </p>,
  <p
    key="p-1"
  >
    For family leave to bond with your child after birth, foster placement, or adoption you need a document that confirms your child’s date of birth or placement.
  </p>,
  <p
    key="p-2"
  >
    You can apply before your child is born or arrives in your home. You will need to provide proof of birth or placement for your application to be approved.
  </p>,
]
`;

exports[`Dashboard renders dashboard content 6`] = `
Array [
  <p
    key="p-0"
  >
    Applying takes around 15 minutes. Your information will save as you go, so you can finish your application later if you need to.
  </p>,
  <p
    key="p-1"
  >
    If you give birth and plan to take both pregnancy-related medical leave and family leave to bond with your newborn, you should apply for medical leave first. Family leave to bond with your child can be 
    <a
      href="https://www.mass.gov/pfml-medical-bonding"
      key="1"
    >
      easily added to your claim
    </a>
     by calling our Contact Center at 
    <a
      href="tel:(833) 344‑7365"
      key="3"
    >
      (833) 344‑7365
    </a>
    .
  </p>,
  <p
    key="p-2"
  >
    You need to create multiple leave applications if you are:
  </p>,
  <ul
    className="usa-list"
    key="3"
  >
    <li
      key="0"
    >
      Taking leave from multiple employers.
    </li>
    <li
      key="1"
    >
      Taking time off in uneven blocks of time (intermittent leave), 
      <strong
        key="strong-1"
      >
        and
      </strong>
       taking time off completely or on a reduced schedule. You’ll need a separate application for the intermittent leave.
    </li>
  </ul>,
]
`;
